test/constBlockConsuming15_4.slq

def foo(x:ğ”¹){
	y:=dup(x);
	if y{
		z:=X(y); /// error
	}else{
		z:=y;
		x:=H(x);
	}
	return (x,z);
}
